# deos-cognite-functions-template

./: .gitignore  OIDC auth with python and Postman.ipynb  README.md  authentication-ids.env  create_poetry  environment.yml  handler-data.env  pyproject.toml  toml_to_requirements.py
cf_template/: cli.py  main.py  prepare_timeseries.py  run_functions.ipynb  transform_timeseries.py
cf_template/template_dir/: Deployment.ipynb
cf_template/template_dir/function/: handler.py  requirements.txt  transformation.py
data/: VAL_11-LT-95034A_DAILY_AVG_DRAINAGE.xlsx
docs/: requirements.txt
docs/dev/: 1 - Architecture Design and Operation Template.docx  2 - DataIntegrationArchitecture_Template.docx  3 - Deployment Plan_Template.docx
docs/development/: 1 - Architecture Design and Operation Template.docx  2 - DataIntegrationArchitecture_Template.docx  3 - Deployment Plan_Template.docx  4 - OperationalProcs_Template.docx  SIT-UaT-Test.xlsx
examples/: main.py  prepare_timeseries.py
examples/CoEA_avg-leakage/: handler.py  transformation.py
examples/CoEA_ideal-power-consumption/: handler.py  pyproject.toml
examples/CoEA_test/: Deployment.ipynb
examples/CoEA_test/function/: handler.py  transformation.py
examples/CoEA_wasted-energy/: handler.py  pyproject.toml  requirements.txt
examples/cf_avg-drainage/: handler.py  pyproject.toml  requirements.txt
examples/examples/CoEA_avg-leakage/: handler.py  pyproject.toml
examples/examples/CoEA_avg-leakage_test/: requirements.txt  transformation.py
src/: README.md  deploy_cognite_functions.py  experimental.ipynb  generate_cf.py  handler.py  handler_utils.py  initialize.py  initialize_cdf_client.py  prepare_timeseries.py  requirements.txt  run_functions.ipynb  run_transformation.py  transformation_utils.py  utilities.py
src/CoEA_avg-leakage/: requirements.txt
src/CoEA_avg-leakage_test/: handler.py
src/CoEA_ideal-power-consumption/: transformation.py
src/CoEA_wasted-energy/: handler.py  transformation.py
src/VAL_11-LT-95007A/: handler.py
src/VAL_11-LT-95007B/: transformation.py
src/avg_drainage_rate/: handler.py
src/cf_avg-drainage/: handler.py  requirements.txt  transformation.py
src/cf_avg-drainage-rate/: handler.py  transformation.py
src/cf_avg-leakage/: handler.py  pyproject.toml  requirements.txt
src/cf_daily-avg-drainage/: handler.py  pyproject.toml  requirements.txt  transformation.py
src/cf_dummy/: handler.py  requirements.txt  transformation.py
src/cf_dummy-calculation/: handler.py  transformation.py
src/cf_hourly-avg-drainage/: handler.py  pyproject.toml  requirements.txt  transformation.py
src/cf_ideal-power-consumption/: handler.py  pyproject.toml  requirements.txt  transformation.py
src/cf_multiple-outputs/: handler.py  requirements.txt  transformation.py
src/cf_multiple_outputs/: handler.py  transformation.py
src/cf_power-Template/: handler.py  pyproject.toml  requirements.txt  transformation.py
src/cf_templatevscharts-template/: pyproject.toml  requirements.txt  transformation.py
src/cf_test/: handler.py  pyproject.toml  requirements.txt  transformation.py
src/cf_wasted-energy/: handler.py  pyproject.toml  requirements.txt  transformation.py
src/deprecated/: experimental.ipynb  transformation_demo.py
src/dummy_calculation/: handler.py  transformation.py
src/examples/CoEA_avg-leakage_test/: handler.py
src/examples/CoEA_ideal-power-consumption/: handler.py
src/examples/CoEA_wasted-energy/: handler.py
src/ideal_power_consumption/: handler.py  transformation.py
src/tests/: test_deploy_cognite_functions.py  test_generate_cf.py  test_handler_utils.py  test_methods.py  test_transformation_utils.py  utils.py
src/tests/cf_test/: handler.py  requirements.txt  transformation.py
src/wasted_energy/: handler.py  requirements.txt  transformation.py
tests/: conftest.py  test_deploy_cognite_functions.py  test_generate_cf.py  test_handler_utils.py  test_methods.py  test_transformation_utils.py
tests/cf_test/: handler.py  transformation.py
time_series_backend/: prepare_timeseries.py  transform_timeseries.py
time_series_calculation/: prepare_timeseries.py  utilities.py
