[tool.poetry]
name = "cf-avg-drainage"
version = "0.1.0"
description = ""
authors = ["vetlenev <vetle.nevland@akerbp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pandas = "^2.2.0"
python-dotenv = "^1.0.1"
cognite-sdk = "^7.15.0"
ipykernel = "^6.29.0"
numpy = "^1.26.3"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
