[tool.poetry]
name = "coea-avg-leakage-test"
version = "0.1.0"
description = ""
authors = ["vetlenev <vetle.nevland@akerbp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cognite-sdk = "^7.17.0"
pyarrow = "^15.0.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.2"
numpy = "^1.26.3"
indsl = {version = "^8.3.0", python = "3.11"}
ipykernel = "^6.29.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
