[tool.poetry]
name = "cf-power-template"
version = "0.1.0"
description = ""
authors = ["vetlenev <vetle.nevland@akerbp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pytest = "^7.4.4"
cognite-sdk = "^7.13.4"
ipykernel = "^6.28.0"
pandas = "^2.1.4"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
