[tool.poetry]
name = "cf-power-template"
version = "0.1.0"
description = ""
authors = ["vetlenev <vetle.nevland@akerbp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
ipykernel = "^6.28.0"
cognite-sdk = "^7.13.4"
python-dotenv = "^1.0.0"
pytest = "^7.4.4"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
