[tool.poetry]
name = "cf-wasted-energy"
version = "0.1.0"
description = ""
authors = ["vetlenev <vetle.nevland@akerbp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
ipykernel = "^6.27.1"
cognite-sdk = "^7.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
